--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ main {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-content: center
+  align-content: center;
   align-items: center;
   background-color: #92C9D5;
   width: 100%;
